--- a/src/static/scss/components/_header.scss
+++ b/src/static/scss/components/_header.scss
@@ -8,8 +8,6 @@
   background-color: var(--color-background);
   justify-content: space-between;
   border-bottom: 1px solid var(--color-highlight);
-  transform: translateZ(0);
-  backface-visibility: hidden;
   @include mixins.default-transition(background-color, color);
 
   a {
